--- a/Python/flask-forms/templates/form.html
+++ b/Python/flask-forms/templates/form.html
@@ -87,6 +87,9 @@
     </fieldset>
     <fieldset>
         <legend>Why ?</legend>
+        <!-- Honeypot -->
+            <input type="checkbox" name="phone_call" value="1" style="display: hidden;" autocomplete="off">
+        <!-- /Honeypot -->
         <input type="checkbox" name="reason" value="repair" id="repair">
         <label for="repair">Repair</label>
         <input type="checkbox" name="reason" value="order" id="order">
